Update views; fix spacing in body cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ body {
 }
 
 #card-background {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.726);
 }
 
 .landing_video {
